--- a/src/stylesheets/components/_navbar.scss
+++ b/src/stylesheets/components/_navbar.scss
@@ -1,18 +1,18 @@
 .menu-list {
   padding: 24px;
-  border: 1px solid black;
+  border: 1px solid $gold;
   width: 200px;
   height: 200px;
   font-size: 12px;
   position: relative;
   z-index: 15;
   a {
-    color: black !important;
+    color: white !important;
     text-decoration: none;
   }
   a:hover {
     transform: scale(1.1);
-    transition:0.5s;
+    transition:0.3s;
   }
 }
 
@@ -26,14 +26,14 @@
   justify-content: space-around;
 
   a {
-    color: black !important;
+    color: white !important;
     text-decoration: none;
-    font-size: 18px;
-    opacity: 0.5;
+    font-size: 20px;
+    opacity: 0.8;
   }
   a:hover {
-    transform: scale(1.1);
-    opacity: 0.7;
+    transform: scale(1.2);
+    opacity: 1;
   }
 }
 
@@ -47,7 +47,7 @@
 }
 
 .nav-bg {
-  background-image: linear-gradient(rgba(255,255,255,0.4),rgba(255,255,255,0.4)), url('https://images.unsplash.com/photo-1531346878377-a5be20888e57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
+  background-image: linear-gradient(rgba(56, 62, 86,0.4),rgba(56, 62, 86,0.4)), url('https://images.unsplash.com/photo-1542462895432-4e29179f6e46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
   x-index: 10;
   background-position: center;
   background-size: cover;
@@ -56,5 +56,5 @@
   left: 0;
   width: 100%;
   height: 100%;
-  transition-duration: 1s;
+  // transition-duration: 1s;
 }
