--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -1,6 +1,38 @@
-$title :'Heebo', sans-serif;
-$chapter :'Cormorant Garamond', serif;
+$title: 'Poppins', sans-serif;
+$sub-title: 'Cormorant Garamond', serif;
+$text :'Maven Pro', sans-serif;
 
 $dark : #383E56;
 $light: #f7f1e7;
 $gold: #BF9969;
+
+// vintage color
+
+$blue: #669fb2;
+$light-grey: #dadfe1;
+$dark-beige: #e8b877;
+$soil: #dd802c;
+$dark-brown: #3e2a20;
+
+
+
+$brown: #b78763;
+$beige: #f6dbbc;
+$light-grey:#f9f7f1;
+$light-blue: #caede3;
+$kaki: #d3b94f;
+$light-beige:#FAEDDF;
+
+
+
+$red: #ef694d;
+$green: #dddb76;
+$sky: #e4f2ef;
+$ocean: #388895;
+
+
+// font-family: 'Cormorant Garamond', serif;
+// font-family: 'Maven Pro', sans-serif;
+// font-family: 'Poppins', sans-serif;
+
+
