--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -1,48 +1,56 @@
 .intro {
-  // background-image: url('https://images.unsplash.com/photo-1551309292-e185c0b6e22a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+  // background-image: url('https://images.unsplash.com/photo-1530819568329-97653eafbbfa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1046&q=80');
   background-position: center;
   background-size: cover;
+  background-color: $blue;
   align-items: center;
   padding: 0px 50px;
-  height: 400px;
+  height: 100vh;
   h1 {
-    // font-family: 'Heebo', sans-serif;
-    font-weight: 500;
-    color: $gold;
-  }
-  h3 {
-    // font-family: 'Cormorant Garamond', serif;
-    font-style: italic;
+    font-weight: 200;
+    color: $light-beige;
+    font-size: 80px;
+  };
+  p {
+    color: $light-beige;
+    font-size: 18px;
   }
 }
 
 #profile-photo {
-  width:100px;
-  border-radius: 50%;
+  width:500px;
+  position:absolute;
+
+  right: 100px;
 }
 
 .title {
   overflow:scroll;
   height: 100vh;
-  padding-left:0px !important;
-  background-color: $light;
   color: $dark;
-  padding-right: 0px;
+  padding-right: 0px !important;
+  padding-left: 30px;
 }
 
 .about {
   padding: 0px 50px;
   align-items: center;
-  background-color: $dark;
-  color:$light;
+  background-color: $light-grey;
+  color:$brown;
   h2{
-    font-family: 'Cormorant Garamond', serif;
-    color: $gold;
+    color: $soil;
   }
-
+  p {
+    color: $brown;
+  }
+  span{
+    font-family: $title;
+    font-weight: 100;
+    font-size: 12px;
+  }
 }
 
 .space-line {
-  border-left: 1px solid $gold;
+  border-left: 1px solid $soil;
   height:60px;
 }
