--- a/src/stylesheets/components/_navbar.scss
+++ b/src/stylesheets/components/_navbar.scss
@@ -1,60 +1,24 @@
-.menu-list {
-  padding: 24px;
-  border: 1px solid $gold;
-  width: 200px;
-  height: 200px;
-  font-size: 12px;
-  position: relative;
-  z-index: 15;
-  a {
-    color: white !important;
-    text-decoration: none;
-  }
-  a:hover {
-    transform: scale(1.1);
-    transition:0.3s;
-  }
+
+.navbar-lewagon {
+  justify-content: space-between;
+  height: 77px;
 }
 
-.nav-follow {
-  z-index: 15;
-  position:absolute;
-  bottom: 30vh;
-  left: 40%;
-  width: 160px;
-  display: flex;
-  justify-content: space-around;
+.navbar-lewagon .navbar-collapse {
+  flex-grow: 0;
+}
 
-  a {
-    color: white !important;
-    text-decoration: none;
-    font-size: 20px;
+.navbar-lewagon a {
+  color:$blue !important;
+  // text-decoration: none;
+  font-family: $title;
+  font-weight: 700;
+  letter-spacing: 3px;
+  &:hover {
     opacity: 0.8;
   }
-  a:hover {
-    transform: scale(1.2);
-    opacity: 1;
-  }
 }
 
-.nav-menu {
-  display:flex;
-  align-items: center;
-  justify-content:center;
-  height: 100vh;
-
-  box-shadow: 0px 0px 10px black;
-}
-
-.nav-bg {
-  background-image: linear-gradient(rgba(56, 62, 86,0.4),rgba(56, 62, 86,0.4)), url('https://images.unsplash.com/photo-1542462895432-4e29179f6e46?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80');
-  x-index: 10;
-  background-position: center;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  // transition-duration: 1s;
+#toggle:hover div {
+    width: 30px;
 }
