--- a/src/stylesheets/components/_profile_photo.scss
+++ b/src/stylesheets/components/_profile_photo.scss
@@ -6,7 +6,7 @@
 
 .profile-follow a {
   font-size: 24px;
-  color: $dark-brown;
+  color: $brown;
   text-decoration: none;
   opacity: 0.6;
   transition: all .2s ease-in-out;
