--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -9,7 +9,7 @@ $gold: #BF9969;
 // vintage color
 
 $blue: #669fb2;
-$light-grey: #dadfe1;
+$grey: #dadfe1;
 $dark-beige: #e8b877;
 $soil: #dd802c;
 $dark-brown: #3e2a20;
