--- a/src/stylesheets/components/_progress.scss
+++ b/src/stylesheets/components/_progress.scss
@@ -1,5 +1,5 @@
 .progress-bar {
-  background-color: $gold !important;
+  background-color: $blue !important;
   // text-align: left !important;
 }
 
