--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -4,44 +4,65 @@
   background-size: cover;
   background-color: $blue;
   align-items: center;
-  padding: 0px 50px;
-  height: 100vh;
+  padding: 0px 130px;
+  height: 95vh;
   h1 {
     font-weight: 200;
     color: $light-beige;
     font-size: 80px;
+    padding-top: 150px;
+    padding-bottom:80px;
   };
   p {
     color: $light-beige;
     font-size: 18px;
+    text-align: justify;
   }
 }
 
 
 .title {
-  overflow:scroll;
+  overflow-y:scroll;
   height: 100vh;
-  color: $dark;
-  padding-right: 0px !important;
-  padding-left: 20px;
+  // padding-right: 0px !important;
+  padding-left: 15px;
+  // left: 350px;
+  // width: 760px;
+  z-index: 98;
+
 }
 
 .about {
-  padding: 0px 50px;
+  padding: 0px 80px;
   align-items: center;
   background-color: $light-grey;
-  color: $soil;
-  p {
-    color: $brown;
+  color: $brown;
+  h2 {
+    color: $blue;
   }
   span{
     font-family: $title;
     font-weight: 100;
     font-size: 12px;
   }
+  p {
+    text-align: justify;
+    margin-bottom: 0px;
+    padding-bottom: 80px;
+  }
 }
 
 .space-line {
-  border-left: 1px solid $soil;
+  border-left: 1px solid $blue;
   height:60px;
+}
+
+.language {
+  img {
+    width:30px;
+  }
+  li{
+    list-style: none;
+
+  }
 }
