--- a/src/stylesheets/components/_progress.scss
+++ b/src/stylesheets/components/_progress.scss
@@ -1,5 +1,5 @@
 .progress-bar {
-  background-color: $blue !important;
+  background-color: $dark-beige !important;
   text-align: left !important;
   padding-left: 20px;
   height:110%;
