--- a/src/stylesheets/components/_skills.scss
+++ b/src/stylesheets/components/_skills.scss
@@ -1,10 +1,10 @@
 #skills {
   padding: 0px 80px;
   align-items: center;
-  background-color: $dark-beige;
-  color: white;
+  background-color: $blue;
+  color: $light-beige;
   h2 {
-    color: $blue;
+    color: $light-beige;
   }
   span{
     font-family: $title;
@@ -14,6 +14,9 @@
   }
   p {
     text-align: justify;
+  }
+  h5 {
+    color: $light-beige;
   }
 }
 
@@ -25,4 +28,14 @@
 
 .language img {
   width:28px;
+}
+
+.language li {
+    display: inline-block;
+    *display:inline;
+
+}
+
+.language ul {
+  padding-left:0px !important;
 }
