--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "components/slide_menu";
 @import "components/skills";
 @import "components/education";
+@import "components/experience";
 
 
 h1{
