add reposive for phone ipad

--- a/src/stylesheets/_config.scss
+++ b/src/stylesheets/_config.scss
@@ -31,8 +31,17 @@ $sky: #e4f2ef;
 $ocean: #388895;
 
 
-// font-family: 'Cormorant Garamond', serif;
-// font-family: 'Maven Pro', sans-serif;
-// font-family: 'Poppins', sans-serif;
+$grid-breakpoints: (
+  xs: 0,
+  sm: 480px,
+  md: 768px,
+  lg: 1024px
+);
+
+$container-max-widths: (
+  sm: 420px,
+  md: 720px,
+  lg: 960px
+);
 
 
