--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "config";
 @import "components/navbar";
+@import "components/content-container";
 @import "components/about";
 @import "components/progress";
 @import "components/profile_photo";
