--- a/src/stylesheets/components/_profile_photo.scss
+++ b/src/stylesheets/components/_profile_photo.scss
@@ -1,10 +1,12 @@
+.profile {
+  height:95vh;
+}
 .profile-photo {
   background-position: center;
   background-size: cover;
   height:80%;
   // position:fixed;
 }
-
 .profile-follow a {
   font-size: 24px;
   color: $brown;
@@ -17,29 +19,22 @@
   }
 }
 
-@media(min-width: 768px) {
-.profile {
-    // position:fixed;
+// @media(max-width: 992px) {
+//   .profile {
+//       height:95vh;
+//     }
+// }
+
+@media(max-width: 800px) {
+  .profile {
     height:50vh;
-    width:100%;
-  }
-  .profile-photo {
-    height:90%;
-    background-position: top;
-    background-size: cover;
+    .profile-photo {
+      background-position: top;
+      background-size: cover;
+    }
   }
 }
 
-@media(min-width: 992px) {
-.profile {
-    // position:fixed;
-    height:100vh;
-    width:350px;
-  }
-  .profile-photo {
-    height:80%;
-  }
-}
 
 
 
