--- a/src/stylesheets/application.scss
+++ b/src/stylesheets/application.scss
@@ -8,6 +8,8 @@
 @import "components/skills";
 @import "components/education";
 @import "components/experience";
+@import "components/projects";
+@import "components/contacts";
 
 
 h1{
