--- a/src/stylesheets/components/_experience.scss
+++ b/src/stylesheets/components/_experience.scss
@@ -1,5 +1,5 @@
 #experiences {
-  padding: 0px 80px;
+  padding: 80px;
   align-items: center;
   background-color: $blue;
   color:$light-beige;
@@ -13,7 +13,13 @@
 
 @media(max-width: 815px) {
   #experiences {
-    padding: 0px 15px;
+    padding: 40px 15px;
+  }
+}
+
+@media (max-width: 1028px) {
+  #experiences {
+    padding: 40px;
   }
 }
 
@@ -53,7 +59,7 @@ details[open] {
   background-color: white;
   color: $blue;
   border-radius: 3px;
-  padding: 0px 10px 15px 10px;
+  // padding: 0px 10px 15px 10px;
   text-align: justify;
   h6, p, h4{
     padding: 0px 15px;
