--- a/src/stylesheets/components/_navbar.scss
+++ b/src/stylesheets/components/_navbar.scss
@@ -38,7 +38,7 @@
 #toggle div {
   height: 3px;
   margin-bottom: 6px;
-  margin-right: 50px;
+  // margin-right: 10px;
   transition: all 0.3s linear;
   background-color: $blue;
   width:17px;
