--- a/src/stylesheets/components/_projects.scss
+++ b/src/stylesheets/components/_projects.scss
@@ -1,7 +1,22 @@
 #projects {
   padding: 80px;
   height:250px;
-  background-color: $light-grey;
+  background-color: $blue;
+  h2 {
+    color:$light-beige;
+  }
+}
+
+@media (max-width: 1028px) {
+  #projects  {
+    padding: 40px;
+  }
+}
+
+@media(max-width: 815px) {
+  #projects {
+    padding: 40px 20px;
+  }
 }
 
 #project1 {
@@ -87,5 +102,5 @@
 
 .project-footer {
   height: 50px;
-  background-color: $light-grey;
+  background-color: $blue;
 }
