--- a/src/stylesheets/components/_education.scss
+++ b/src/stylesheets/components/_education.scss
@@ -15,6 +15,9 @@
     margin-left:40px;
     // border-left: 1px solid $blue;
     padding-left: 30px;
+    img {
+      width:40px;
+    }
   }
 
 }
