--- a/src/stylesheets/components/_skills.scss
+++ b/src/stylesheets/components/_skills.scss
@@ -51,3 +51,37 @@
 .language ul {
   padding-left:0px !important;
 }
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+  background-color: $blue;
+  color:$light-beige;
+  border-bottom: 3px solid $light-beige;
+}
+
+.tab-content>.tab-pane {
+  .fade:not(.show) {
+    display: none !important;
+    opacity: 0;
+  }
+}
+
+.nav-pills {
+  a {
+    color:$light-beige;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-right: 20px;
+  }
+}
+
+.skill-tab {
+  padding: 6px 15px 6px 15px;
+  background-color: $light-beige;
+  color:$blue;
+  border-radius: 5rem;
+  height:40px;
+  img {
+    height: 30px;
+  }
+}
+
