--- a/src/stylesheets/components/_profile_photo.scss
+++ b/src/stylesheets/components/_profile_photo.scss
@@ -11,11 +11,23 @@
   font-size: 24px;
   color: $brown;
   text-decoration: none;
-  opacity: 0.6;
+  opacity: 0.8;
   transition: all .2s ease-in-out;
   &:hover {
-    opacity: 0.8;
+    opacity: 1;
     transform: scale(1.2);
+  }
+}
+
+.profile-follow-light a {
+  font-size: 20px;
+  color: $light-beige;
+  text-decoration: none;
+  opacity: 0.8;
+  transition: all .2s ease-in-out;
+  &:hover {
+    opacity: 1;
+    transform: scale(1.1);
   }
 }
 
