--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -22,9 +22,9 @@
   i {
     font-size: 22px;
   }
-  img {
-    width:30px;
-  }
+  // img {
+  //   width:30px;
+  // }
   a {
     text-decoration: none;
     color:$light-beige;
