--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-color: $blue;
   align-items: center;
-  height: 95vh;
+  height: 700px;
   .intro-text {
     padding: 100px 80px;
   }
@@ -33,6 +33,28 @@
       font-weight: bold;
     }
   }
+  .chevron-down {
+    i {
+      margin-left: 25%;
+      color: $light-beige;
+      opacity: 0.7;
+      font-size: 60px;
+      position:absolute;
+      animation-duration: 0.5s;
+      animation-name: fleshdown;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+    }
+    @keyframes fleshdown {
+      from {
+        bottom: 25px
+      }
+
+      to {
+        bottom: 10px
+      }
+    }
+  }
 }
 
 .title {
@@ -48,15 +70,13 @@
 
 @media (min-width: 1029px) {
   .title {
-    overflow-y: scroll;
-    height: 100vh;
+    overflow-y: visible
   }
 }
 
 @media (max-width: 1028px) {
   .title {
-    overflow-y: scroll;
-    height: 100vh;
+    overflow-y: visible;
     .about {
       padding: 40px;
     }
@@ -82,6 +102,9 @@
         }
       h1 {
         font-size:54px;
+      }
+      .chevron-down {
+        display: none;
       }
     }
   }
