--- a/src/stylesheets/components/_projects.scss
+++ b/src/stylesheets/components/_projects.scss
@@ -30,19 +30,17 @@
   position:relative;
   box-shadow: 0px 0px 5px $light-grey;
   border:5px solid $light-beige;
-  transition: all .5s ease-in-out;
   .project-img {
     background: no-repeat;
     background-position: top;
     background-size: cover;
     width:100%;
     height:250px;
-    &:hover {
-      opacity: 0.8;
-    }
   }
   #project1-info {
-    display:none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s linear;
     height: 250px;
     width: 50%;
     position: absolute;
@@ -51,7 +49,6 @@
     padding:20px;
     background-color: $ocean;
     color: $light-grey;
-    transition: all .5s ease-in-out;
   }
 
 }
@@ -59,18 +56,16 @@
   position:relative;
   box-shadow: 0px 0px 5px $light-grey;
   border:5px solid $light-beige;
-  transition: all .5s ease-in-out;
   .project2-img {
     background-position: center;
     background-size: cover;
     width:100%;
     height:250px;
-    &:hover {
-      opacity: 0.8;
-    }
   }
   #project2-info {
-    display:none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s linear;
     height: 250px;
     width: 50%;
     position: absolute;
@@ -79,7 +74,6 @@
     padding:20px;
     background-color: $red;
     color: $light-grey;
-    transition: all .5s ease-in-out;
   }
 }
 
@@ -87,28 +81,24 @@
   position:relative;
   box-shadow: 0px 0px 5px $light-grey;
   border:5px solid $light-beige;
-  transition: all .5s ease-in-out;
   .project3-img {
     background-position: center;
     background-size: cover;
     width:100%;
     height:250px;
-    &:hover {
-      opacity: 0.8;
-    }
   }
   #project3-info {
-    display:none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.3s, opacity 0.3s linear;
     height: 250px;
     width: 50%;
-    // z-index: -1;
     position: absolute;
     top: 0px;
     right: 0px;
     padding:20px;
     background-color: $kaki;
     color: $light-grey;
-    transition: all .5s ease-in-out;
   }
 }
 
