--- a/src/stylesheets/components/_projects.scss
+++ b/src/stylesheets/components/_projects.scss
@@ -21,7 +21,8 @@
   }
   #project1-info, #project2-info, #project3-info {
     width:100% !important;
-    display:block !important;
+    visibility: visible !important;
+    opacity: 1 !important;
     position:relative !important;
   }
 }
