--- a/src/stylesheets/components/_projects.scss
+++ b/src/stylesheets/components/_projects.scss
@@ -46,7 +46,7 @@
     width: 50%;
     position: absolute;
     top: 0px;
-    right: 0px;
+    left: 0px;
     padding:20px;
     background-color: $dark;
     color: $light-grey;
