--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -12,12 +12,12 @@
   h1 {
     font-weight: 200;
     color: $light-beige;
-    font-size: 80px;
+    font-size: 5vw;
     margin-bottom:50px;
   };
   p {
     color: $light-beige;
-    font-size: 18px;
+    font-size: 1.5vw;
     text-align: justify;
   }
   i {
@@ -102,7 +102,7 @@
           padding: 80px 20px;
         }
       h1 {
-        font-size:54px;
+        font-size:12vw;
       }
       .chevron-down {
         display: none;
