--- a/src/stylesheets/components/_contacts.scss
+++ b/src/stylesheets/components/_contacts.scss
@@ -22,7 +22,7 @@
   #contacts {
     padding: 80px 20px;
     .profile-follow-light a {
-      font-size: 12px;
+      font-size: 3vw;
     }
   }
 }
